# google-dav-proxy

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/: formatting.nix  uv-workspace.nix  uv2nix.nix
src/google_dav_proxy/: cli.py  cli_test.py  google_session.py  google_session_wrapper.py  hello_app.py  local_server.py  redirect_app.py  utils.py
