[project]
name = "google-dav-proxy"
version = "0.1.0"
description = "A {Cal,Card}DAV proxy for Google."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgineer",
    "aiohttp-oauthlib",
    "pydantic",
    "typer",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[project.scripts]
google-dav-proxy = "google_dav_proxy.cli:app"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
# Always print a full diff on assertion failures.
verbosity_assertions = 2
addopts = [
    # https://docs.pytest.org/en/stable/explanation/goodpractices.html#which-import-mode
    "--import-mode=importlib",
    "--cov=src",
]
# Treat warnings as errors.
filterwarnings = [
    "error",
    # TODO: file an issue upstream.
    # <https://git.sr.ht/~whynothugo/aiohttp-oauthlib> doesn't seem to have an
    # issue tracker, so I suppose we need to email the author directly?
    # Details:
    #  - https://github.com/aio-libs/aiohttp/issues/2691
    #  - https://github.com/aio-libs/aiohttp/issues/3185
    "ignore:Inheritance class OAuth2Session from ClientSession is discouraged:DeprecationWarning",
]

[tool.coverage.report]
show_missing = true
